--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "live-server"
   },
   "author": "Oliwier Sellig",
   "license": "ISC",
   "dependencies": {
+    "live-server": "^1.2.2",
     "node-sass": "^9.0.0",
     "sass": "^1.70.0"
   }
